# K-IFRS_RAG_CHATBOT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  start-demo.sh
.github/workflows/: ci.yml
data/sample/: standards.json
evals/: baseline.jsonl  dense_smoke.jsonl  hybrid_regression.jsonl
scripts/: audit_pdfs.py  build_index.py  evaluate.py  ingest_pdfs.py  search_index.py
src/kifrs_rag/: __init__.py  api.py  dense_retrieval.py  evaluation.py  generation.py  guardrails.py  hybrid_retrieval.py  ingestion.py  models.py  openai_harness.py  pdf_ingestion.py  retrieval.py  service.py
src/kifrs_rag/static/: app.js  index.html  styles.css
tests/: test_pipeline.py
