[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kifrs-rag"
version = "0.1.0"
description = "Grounded K-IFRS retrieval-augmented generation API"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110,<1", "uvicorn>=0.27,<1", "pydantic>=2.6,<3"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "httpx>=0.27,<1", "ruff>=0.5,<1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

